--- a/erkeb/Base.lproj/Main.storyboard
+++ b/erkeb/Base.lproj/Main.storyboard
@@ -44,7 +44,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HeaderLogo" translatesAutoresizingMaskIntoConstraints="NO" id="BNJ-fq-DWY">
-                                        <rect key="frame" x="67.5" y="5" width="187" height="30"/>
+                                        <rect key="frame" x="67.5" y="5" width="187" height="30.000000000000014"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="FuZ-8y-ktu"/>
                                             <constraint firstAttribute="width" constant="187" id="foN-wp-Z1Y"/>
@@ -273,6 +273,9 @@
                                 <state key="normal" title="Inloggen" image="IconInloggenAsset 22">
                                     <color key="titleColor" red="0.08235294118" green="0.090196078430000007" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="inloggenBtnWasPressed:" destination="tby-Ch-iTH" eventType="touchUpInside" id="kpb-jU-vqJ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -292,10 +295,153 @@
             </objects>
             <point key="canvasLocation" x="696.79999999999995" y="28.335832083958024"/>
         </scene>
+        <!--InloggenVC-->
+        <scene sceneID="8bb-zg-6Ne">
+            <objects>
+                <viewController storyboardIdentifier="InloggenVC" id="TEQ-mZ-EzH" customClass="InloggenVC" customModule="erkeb" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lKr-wX-CPH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HomeBGAsset 24" translatesAutoresizingMaskIntoConstraints="NO" id="i3F-7X-JjH">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hbM-Oq-rv9">
+                                <rect key="frame" x="20" y="25" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="BrK-fW-G0b"/>
+                                    <constraint firstAttribute="height" constant="30" id="TUS-0v-Ful"/>
+                                </constraints>
+                                <state key="normal" image="HomeCancelBTNAsset 27"/>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="bBg-1g-9Re">
+                                <rect key="frame" x="35" y="100" width="276" height="93"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HomeLogoAsset 25" translatesAutoresizingMaskIntoConstraints="NO" id="F3b-PF-AC4">
+                                        <rect key="frame" x="0.0" y="0.0" width="276" height="62"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="276" id="i5I-iG-gBX"/>
+                                            <constraint firstAttribute="height" constant="62" id="uNA-zE-yRC"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="s6t-Or-nJW">
+                                        <rect key="frame" x="0.0" y="62" width="183.5" height="31"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WIJ KEREN NIET OM," textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DCf-i0-i9t">
+                                                <rect key="frame" x="0.0" y="0.0" width="183.5" height="15.5"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-BoldItalic" family="Avenir Next" pointSize="11"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WIJ MAKEN ALLEEN EEN OMWEG." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rLk-4g-xRg">
+                                                <rect key="frame" x="0.0" y="15.5" width="183.5" height="15.5"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-BoldItalic" family="Avenir Next" pointSize="11"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="31" id="ivy-IP-laU"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o7d-Ls-xEI">
+                                <rect key="frame" x="35" y="315" width="305" height="307"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="307" id="4Y6-b8-Kcl"/>
+                                    <constraint firstAttribute="width" constant="305" id="GxH-nT-XPN"/>
+                                </constraints>
+                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="atz-Rl-mie">
+                                <rect key="frame" x="50" y="390" width="275" height="215"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xep-4r-E1c">
+                                        <rect key="frame" x="0.0" y="0.0" width="275" height="41"/>
+                                        <color key="backgroundColor" red="0.94509803921568625" green="0.93333333333333335" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="1BF-OY-330"/>
+                                            <constraint firstAttribute="width" constant="275" id="Lyk-CX-vY4"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="Passagier"/>
+                                            <segment title="Bestuurder"/>
+                                        </segments>
+                                        <color key="tintColor" red="0.47450980390000003" green="0.40000000000000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X9X-Wf-wOw">
+                                        <rect key="frame" x="0.0" y="55" width="275" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="275" id="6B3-yC-0ad"/>
+                                            <constraint firstAttribute="height" constant="40" id="iyU-6s-nje"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.08235294118" green="0.090196078430000007" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Wachtwoord" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DkL-P2-tTw">
+                                        <rect key="frame" x="0.0" y="110" width="275" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="275" id="hGA-zX-Hda"/>
+                                            <constraint firstAttribute="height" constant="40" id="tHw-7K-qL2"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.08235294118" green="0.090196078430000007" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aoU-cT-cNb" customClass="RoundedBoekEenRitButton" customModule="erkeb" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="165" width="275" height="50"/>
+                                        <color key="backgroundColor" red="0.47450980390000003" green="0.40000000000000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="275" id="1I9-YG-x0y"/>
+                                            <constraint firstAttribute="height" constant="50" id="wqZ-w5-S7J"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="21"/>
+                                        <state key="normal" title="Aanmelden">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAt-t3-D2o">
+                                <rect key="frame" x="61" y="329" width="253" height="47"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">Verlies geen tijd en meld je rechtstreeks
+aan zonder te registreren!</string>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="hbM-Oq-rv9" firstAttribute="leading" secondItem="lFQ-me-NUk" secondAttribute="leading" constant="20" id="7I9-cN-c3A"/>
+                            <constraint firstItem="i3F-7X-JjH" firstAttribute="top" secondItem="lKr-wX-CPH" secondAttribute="top" id="Baq-qm-7th"/>
+                            <constraint firstItem="hbM-Oq-rv9" firstAttribute="top" secondItem="lFQ-me-NUk" secondAttribute="top" constant="5" id="Fqm-w8-R3K"/>
+                            <constraint firstItem="i3F-7X-JjH" firstAttribute="leading" secondItem="lFQ-me-NUk" secondAttribute="leading" id="Hqp-Gl-mTe"/>
+                            <constraint firstItem="lFQ-me-NUk" firstAttribute="bottom" secondItem="o7d-Ls-xEI" secondAttribute="bottom" constant="45" id="QrC-PL-Qcw"/>
+                            <constraint firstItem="i3F-7X-JjH" firstAttribute="trailing" secondItem="lFQ-me-NUk" secondAttribute="trailing" id="cXZ-gN-RyO"/>
+                            <constraint firstItem="i3F-7X-JjH" firstAttribute="bottom" secondItem="lFQ-me-NUk" secondAttribute="bottom" id="itz-Lj-YIk"/>
+                            <constraint firstItem="o7d-Ls-xEI" firstAttribute="leading" secondItem="lFQ-me-NUk" secondAttribute="leading" constant="35" id="tv7-bN-U73"/>
+                            <constraint firstItem="lFQ-me-NUk" firstAttribute="trailing" secondItem="o7d-Ls-xEI" secondAttribute="trailing" constant="35" id="xtx-eZ-Tuu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lFQ-me-NUk"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zo3-rG-xiU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1338.4000000000001" y="28.335832083958024"/>
+        </scene>
     </scenes>
     <resources>
         <image name="CenterMapBtnAsset 3" width="60" height="60"/>
         <image name="HeaderLogo" width="305.5" height="53.5"/>
+        <image name="HomeBGAsset 24" width="750" height="1334"/>
+        <image name="HomeCancelBTNAsset 27" width="50" height="50"/>
+        <image name="HomeLogoAsset 25" width="585.5" height="101.5"/>
         <image name="IconBetalingAsset 18" width="22" height="15.5"/>
         <image name="IconErkebFamAsset 19" width="21" height="15.5"/>
         <image name="IconHelpAsset 21" width="20" height="20"/>
