--- a/erkeb/Base.lproj/Main.storyboard
+++ b/erkeb/Base.lproj/Main.storyboard
@@ -4,7 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment version="4352" identifier="iOS"/>
+        <deployment version="4608" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -44,7 +44,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="HeaderLogo" translatesAutoresizingMaskIntoConstraints="NO" id="BNJ-fq-DWY">
-                                        <rect key="frame" x="67.5" y="5" width="187" height="30.000000000000014"/>
+                                        <rect key="frame" x="67.5" y="5" width="187" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="FuZ-8y-ktu"/>
                                             <constraint firstAttribute="width" constant="187" id="foN-wp-Z1Y"/>
@@ -313,6 +313,9 @@
                                     <constraint firstAttribute="height" constant="30" id="TUS-0v-Ful"/>
                                 </constraints>
                                 <state key="normal" image="HomeCancelBTNAsset 27"/>
+                                <connections>
+                                    <action selector="cancelBtnWasPressed:" destination="TEQ-mZ-EzH" eventType="touchUpInside" id="uxh-n6-DO6"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="bBg-1g-9Re">
                                 <rect key="frame" x="35" y="100" width="276" height="93"/>
@@ -347,7 +350,7 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o7d-Ls-xEI">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o7d-Ls-xEI" customClass="RoundedInloggenForm" customModule="erkeb" customModuleProvider="target">
                                 <rect key="frame" x="35" y="315" width="305" height="307"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -355,66 +358,70 @@
                                     <constraint firstAttribute="width" constant="305" id="GxH-nT-XPN"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="atz-Rl-mie">
-                                <rect key="frame" x="50" y="390" width="275" height="215"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="feN-tU-tqc">
+                                <rect key="frame" x="49" y="336" width="275" height="265"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xep-4r-E1c">
-                                        <rect key="frame" x="0.0" y="0.0" width="275" height="41"/>
-                                        <color key="backgroundColor" red="0.94509803921568625" green="0.93333333333333335" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="40" id="1BF-OY-330"/>
-                                            <constraint firstAttribute="width" constant="275" id="Lyk-CX-vY4"/>
-                                        </constraints>
-                                        <segments>
-                                            <segment title="Passagier"/>
-                                            <segment title="Bestuurder"/>
-                                        </segments>
-                                        <color key="tintColor" red="0.47450980390000003" green="0.40000000000000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </segmentedControl>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="X9X-Wf-wOw">
-                                        <rect key="frame" x="0.0" y="55" width="275" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="275" id="6B3-yC-0ad"/>
-                                            <constraint firstAttribute="height" constant="40" id="iyU-6s-nje"/>
-                                        </constraints>
-                                        <color key="textColor" red="0.08235294118" green="0.090196078430000007" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Wachtwoord" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DkL-P2-tTw">
-                                        <rect key="frame" x="0.0" y="110" width="275" height="40"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="275" id="hGA-zX-Hda"/>
-                                            <constraint firstAttribute="height" constant="40" id="tHw-7K-qL2"/>
-                                        </constraints>
-                                        <color key="textColor" red="0.08235294118" green="0.090196078430000007" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="16"/>
-                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aoU-cT-cNb" customClass="RoundedBoekEenRitButton" customModule="erkeb" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="165" width="275" height="50"/>
-                                        <color key="backgroundColor" red="0.47450980390000003" green="0.40000000000000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="275" id="1I9-YG-x0y"/>
-                                            <constraint firstAttribute="height" constant="50" id="wqZ-w5-S7J"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="21"/>
-                                        <state key="normal" title="Aanmelden">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAt-t3-D2o">
+                                        <rect key="frame" x="0.0" y="0.0" width="275" height="36"/>
+                                        <string key="text">Verlies geen tijd en meld je rechtstreeks
+aan zonder te registreren!</string>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="13"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="atz-Rl-mie">
+                                        <rect key="frame" x="0.0" y="50" width="275" height="215"/>
+                                        <subviews>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xep-4r-E1c">
+                                                <rect key="frame" x="0.0" y="0.0" width="275" height="41"/>
+                                                <color key="backgroundColor" red="0.94509803921568625" green="0.93333333333333335" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="1BF-OY-330"/>
+                                                    <constraint firstAttribute="width" constant="275" id="Lyk-CX-vY4"/>
+                                                </constraints>
+                                                <segments>
+                                                    <segment title="Passagier"/>
+                                                    <segment title="Bestuurder"/>
+                                                </segments>
+                                                <color key="tintColor" red="0.47450980390000003" green="0.40000000000000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                            </segmentedControl>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="X9X-Wf-wOw" customClass="RoundedTextField" customModule="erkeb" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="55" width="275" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="275" id="6B3-yC-0ad"/>
+                                                    <constraint firstAttribute="height" constant="40" id="iyU-6s-nje"/>
+                                                </constraints>
+                                                <color key="textColor" red="0.08235294118" green="0.090196078430000007" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Wachtwoord" textAlignment="natural" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="DkL-P2-tTw" customClass="RoundedTextField" customModule="erkeb" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="110" width="275" height="40"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="275" id="hGA-zX-Hda"/>
+                                                    <constraint firstAttribute="height" constant="40" id="tHw-7K-qL2"/>
+                                                </constraints>
+                                                <color key="textColor" red="0.08235294118" green="0.090196078430000007" blue="0.1019607843" alpha="1" colorSpace="calibratedRGB"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="16"/>
+                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aoU-cT-cNb" customClass="RoundedInloggenButton" customModule="erkeb" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="165" width="275" height="50"/>
+                                                <color key="backgroundColor" red="0.47450980390000003" green="0.40000000000000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="275" id="1I9-YG-x0y"/>
+                                                    <constraint firstAttribute="height" constant="50" id="wqZ-w5-S7J"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="21"/>
+                                                <state key="normal" title="Aanmelden">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GAt-t3-D2o">
-                                <rect key="frame" x="61" y="329" width="253" height="47"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <string key="text">Verlies geen tijd en meld je rechtstreeks
-aan zonder te registreren!</string>
-                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="13"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
